--- a/css/index.css
+++ b/css/index.css
@@ -5,10 +5,10 @@ html, body{
   width: 100%;
   font-family: 'Poppins',sans-serif;
   color: #222;
+  background-color: rgba(247, 237, 237,0.1);
 }
-#img-ptfe{
-  border: none;
-  border-radius: 25px;
+nav{
+  box-shadow: 0px 0px 20px rgba(255,255,255,0.02);
 }
 .navbar{
   padding: .8rem;
@@ -58,8 +58,11 @@ html, body{
   font-size: 4em;
   margin:1rem;
   text-shadow: 3px 3px 3px rgba(110, 77, 209,0.5);
+  transition: 0.4s;
 }
-
+.fa-plane:hover,.fa-car:hover,.fa-plus:hover{
+  font-size: 5em;
+}
 footer{
   background-color: #3f3f3f;
   color: #d5d5d5;
@@ -124,7 +127,10 @@ hr.light{
     font-size: 200%;
   }
 }
-
+.card{
+  margin-bottom: 15px;
+}
+}
 @media(max-width:650px){
   .carousel-caption{
     top:35%;
