--- a/css/productCss/belowSeal.css
+++ b/css/productCss/belowSeal.css
@@ -72,10 +72,12 @@ background-color: #4CAF50;
 }
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 8px 10px;
+  font-size:0.9rem;
   text-decoration: none;
   display: block;
 }
+
 
 .dropdown-content a:hover {background-color: #ddd;}
 
