--- a/css/productCss/valve.css
+++ b/css/productCss/valve.css
@@ -71,7 +71,8 @@ background-color: #4CAF50;
 }
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 8px 10px;
+  font-size:0.9rem;
   text-decoration: none;
   display: block;
 }
