--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ nav{
 }
 .navbar{
   padding: .8rem;
+  background-color: #f4f4f4;
 }
 .navbar-nav li{
   padding-right:20px;
@@ -65,11 +66,11 @@ nav{
 }
 footer{
   background-color: #3f3f3f;
-  color: #d5d5d5;
+  color: #fff;
   padding-top: 2rem;
 }
 hr.light{
-  border-top: 1px solid #d5d5d5;
+  border-top: 1px solid #fff;
   width:75%;
 }
 .card{
