Ptfe and Filled Ptfe completed.

--- a/css/ptfe.css
+++ b/css/ptfe.css
@@ -51,29 +51,32 @@ html, body{
   padding: 10px;
   white-space: nowrap;
 }
-.ptfe-img{
-  text-align: center;
-}
 .first{
   background-color: #f4f4f4;
   padding: 20px;
-  height: 500px;
-  overflow-y: auto;
 }
-.first::-webkit-scrollbar{
-  width: 5px;
-}
-.first::-webkit-scrollbar-thumb{
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
-  border-radius: 3px;
- }
 .row{
   margin: 50px auto;
 }
 .content hr{
   border-color: #fff;
 }
+.third{
+  background-color:#f4f4f4;
+}
+.third-inner{
+  background-color:rgb(247, 237, 237);
+  height: 550px;
+  overflow-y: auto;
+}
+.third-inner::-webkit-scrollbar{
+  width: 5px;
+}
+.third-inner::-webkit-scrollbar-thumb{
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+  border-radius: 3px;
+ }
 .lead{
   font-size: 100%;
 }
@@ -84,7 +87,8 @@ html, body{
   padding-top: 20px;
 }
 .table-custom{
-  height: 550px;
+  margin-top: 1rem;
+  height: 700px;
   overflow-y: auto;
 }
 .table-custom::-webkit-scrollbar{
@@ -103,6 +107,19 @@ html, body{
    top:0px;
    border-top: 1px solid #dee2e6;
    border-bottom: 1px solid #dee2e6;
+ }
+ .card-img-overlay h6{
+   background-color: rgba(0, 0, 0, 0.6);
+   color: white;
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   left:0;
+   padding: 20px;
+   margin: 0;
+ }
+ .card-columns{
+   display: inline-block;
  }
 footer{
   background-color: #3f3f3f;
@@ -152,7 +169,7 @@ hr.light{
     font-size: 300%;
   }
 }
-@media(max-width:420px) {
+@media(max-width:425px) {
   h3{
     font-size: 1.3rem;
   }
@@ -168,7 +185,7 @@ hr.light{
   .bg-text{
     font-size: 100%;
     white-space: nowrap;
-    top:37%;
+    top:35%;
     transform: translate(-50%, -200%);
   }
   .bg-title{
