--- a/css/index.css
+++ b/css/index.css
@@ -1,51 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap');
-
-html, body{
-  height: 100%;
-  width: 100%;
-  font-family: 'Poppins',sans-serif;
-  color: #222;
-  background-color: rgba(247, 237, 237,0.1);
-}
-nav{
-  box-shadow: 0px 0px 20px rgba(255,255,255,0.02);
-}
-.navbar{
-  padding: .8rem;
-  background-color: #f4f4f4;
-}
-.navbar-nav li{
-  padding-right:20px;
-}
-.nav-link{
-  font-size: 1.1em;!important;
-}
 .carousel-inner img{
   width: 100%;
-  height: 20%;
+  height: auto;
 }
 .carousel-caption{
   position: absolute;
   top:50%;
-  transform: translateY(-40%);
+  transform: translateY(-80%);
 }
-.carousel-caption h1{
-  font-size: 500%;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 20px #000;
+.carousel-caption img{
+  height: 330px;
+  width: auto;
 }
-.carousel-caption h3{
-  font-size: 200%;
-  font-weight: 500;
-  text-shadow: 1px 1px 15px #000;
-  padding-bottom: 1rem;
-}
-.padding{
-  padding-bottom: 2rem;
-}
+
 .welcome{
   width: 75%;
-  margin: 0 auto;
+  margin: 0 auto !important;
   padding-top: 2rem;
 }
 .welcome hr{
@@ -55,134 +24,44 @@ nav{
   margin-bottom: 1rem;
 }
 .fa-plane,.fa-car,.fa-plus{
-  color:#6e4dd1;
+  color:#b52c2c;
   font-size: 4em;
   margin:1rem;
-  text-shadow: 3px 3px 3px rgba(110, 77, 209,0.5);
+  text-shadow: 3px 3px 3px rgba(181, 44, 44,0.5);
   transition: 0.4s;
 }
 .fa-plane:hover,.fa-car:hover,.fa-plus:hover{
   font-size: 5em;
 }
-footer{
-  background-color: #3f3f3f;
-  color: #fff;
-  padding-top: 2rem;
-}
-hr.light{
-  border-top: 1px solid #fff;
-  width:75%;
-}
-.card{
-  box-shadow: 1px 1px 10px #d5d5d5;
-}
-.card-content{
-  padding: 20px;
-}
-/*Media Queries*/
-@media(max-width:992px){
-  .carousel-caption{
-    position: absolute;
-    top:40%;
-  }
-  .carousel-caption h1{
-    font-size: 400%;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 20px #000;
-  }
-  .carousel-caption h3{
-    font-size: 200%;
-    font-weight: 300;
-    text-shadow: 1px 1px 15px #000;
-    padding-bottom: 1rem;
-  }
-  .carousel-caption .btn{
-    font-size: 95%;
-    padding: 10px 18px;
-  }
-  .display-4{
-    font-size: 200%;
-  }
-}
+
+
+
+
 @media(max-width:768px) {
+  .carousel-caption img{
+    height: 200px;
+    width: auto;
+  }
   .carousel-caption{
     position: absolute;
-    top:40%;
-  }
-  .carousel-caption h1{
-    font-size: 350%;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 20px #000;
-  }
-  .carousel-caption h3{
-    font-size: 100%;
-    font-weight: 400;
-    text-shadow: 1px 1px 15px #000;
-    padding-bottom: 0.7rem;
-  }
-  .carousel-caption .btn{
-    font-size: 95%;
-    padding: 8px 14px;
-  }
-  .display-4{
-    font-size: 200%;
-  }
-}
-.card{
-  margin-bottom: 15px;
-}
-}
-@media(max-width:650px){
-  .carousel-caption{
-    position: absolute;
-    top:35%;
-  }
-  .carousel-caption h1{
-    font-size: 200%;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 20px #000;
-  }
-  .carousel-caption h3{
-    font-size: 100%;
-    font-weight: 300;
-    text-shadow: 1px 1px 15px #000;
-    padding-bottom: 0.4rem;
-  }
-  .carousel-caption .btn{
-    font-size: 90%;
-    padding: 4px 8px;
+    top:50%;
+    transform: translateY(-90%);
   }
   .carousel-indicators{
-    display: none;
-  }
-  .display-4{
-    font-size: 160%;
+    display: none !important;
   }
 }
-@media(max-width:540px){
+@media(max-width:425px) {
+  .carousel-caption img{
+    height: 100px;
+    width: auto;
+  }
   .carousel-caption{
     position: absolute;
-    top:40%;
-  }
-  .carousel-caption h1{
-    font-size: 230%;
-    text-transform: uppercase;
-    text-shadow: 1px 1px 20px #000;
-  }
-  .carousel-caption h3{
-    font-size: 100%;
-    font-weight: 300;
-    text-shadow: 1px 1px 15px #000;
-    padding-bottom: 0.4rem;
-  }
-  .carousel-caption .btn{
-    font-size: 90%;
-    padding: 4px 8px;
+    top:50%;
+    transform: translateY(-90%);
   }
   .carousel-indicators{
-    display: none;
-  }
-  .display-4{
-    font-size: 185%;
+    display: none !important;
   }
 }
