--- a/css/base.css
+++ b/css/base.css
@@ -52,6 +52,7 @@ nav{
 .navbar-brand img{
   width: auto;
   height: 50px;
+  filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.3));
 }
 
 .navbar-nav li{
